# autopsyai

./: .coverage  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
autopsyai/: __init__.py  cli.py  config.py
autopsyai/analyzers/: __init__.py  base.py  cost_analyzer.py  failure_analyzer.py  latency_analyzer.py  loop_detector.py
autopsyai/core/: __init__.py  replay.py  store.py  tracer.py
autopsyai/integrations/: __init__.py  base.py  raw_integration.py
autopsyai/models/: __init__.py  analysis.py  span.py  trace.py
autopsyai/reporters/: __init__.py  html_reporter.py  json_reporter.py  terminal.py
examples/: simple_agent.py
tests/: conftest.py
tests/integration/: test_tracer.py
tests/unit/: test_analyzers.py  test_models.py  test_store.py
