[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autopsyai"
version = "0.1.0"
description = "Local-first agent run debugger — record, replay, and diagnose multi-step LLM agent failures"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kaparthy Reddy", email = "you@example.com" }]
keywords = ["llm", "agent", "debugging", "tracing", "observability", "ai", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.20.0",
    "anyio>=4.3.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.1",
    "xxhash>=3.4.1",
]

[project.optional-dependencies]
openai = ["openai>=1.23.0"]
anthropic = ["anthropic>=0.26.0"]
langchain = ["langchain-core>=0.2.0"]
all = ["autopsyai[openai,anthropic,langchain]"]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "respx>=0.21.0",
    "faker>=24.0.0",
    "time-machine>=2.14.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
autopsyai = "autopsyai.cli:app"

[project.urls]
Homepage = "https://github.com/KaparthyReddy/autopsyai"
Repository = "https://github.com/KaparthyReddy/autopsyai"
Issues = "https://github.com/KaparthyReddy/autopsyai/issues"
Changelog = "https://github.com/KaparthyReddy/autopsyai/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "autopsyai/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["autopsyai"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=autopsyai",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=40",
    "-v",
]
filterwarnings = ["error", "ignore::DeprecationWarning"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["aiosqlite"]
ignore_missing_imports = true

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["autopsyai"]
omit = ["tests/*", "**/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
